# git-repo-generator

./: README.md  __init__.py  pyproject.toml
git_repo_generator/: cli.py  generator.py
