[tool.poetry]
name = "git-repo-generator"
version = "0.1.0"
description = ""
authors = ["Kuba Jasko <kubajasko@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "git_repo_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"

[tool.poetry.scripts]
git-repo-generator = "git_repo_generator.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
